[metadata]
name = 'invoices'
version = '0.0.1'
description = ''
author = 'GYCHEN'
author_email = 'gy.chen@gms.nutc.edu.tw'
license = 'MIT/Apache-2.0'
url = 'https://github.com/_/invoices'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
